inheritance single table

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,24 @@
 spring.application.name=productcatalog
 
 product.service.type=fakeStoreProxyProductService
+
+
+# appn.properties is nothing but a hashmap of key vs value
+
+
+
+
+#fakestore config   values
+
+fakestore.api.url=https://fakestoreapi.com
+fakestore.api.path.product=/products
+
+server.error.include-stacktrace=never
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/productservice
+spring.datasource.username=root
+spring.datasource.password=Riyanshi@17
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql: true
